--- a/src/scss/modules/_misc.scss
+++ b/src/scss/modules/_misc.scss
@@ -1,15 +1,15 @@
 ::selection{
-  background: #333;
-  color: #fff;
+  background: $color-primary;
+  color: $color-primary-text;
   text-shadow: none;
 }
 ::-moz-selection{
-  background: #333;
-  color: #fff;
+  background: $color-primary;
+  color: $color-primary-text;
   text-shadow: none;
 }
 ::-webkit-selection{
-  background: #333;
-  color: #fff;
+  background: $color-primary;
+  color: $color-primary-text;
   text-shadow: none;
 }
