--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -1,10 +1,8 @@
-@font-face {
-  font-family: 'Font-Name';
-  src: url('../fonts/font-name.eot');
-  src: url('../fonts/font-name.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/font-name.woff') format('woff'),
-       url('../fonts/font-name.ttf') format('truetype'),
-       url('../fonts/font-name.svg#font-name') format('svg');
-  font-weight: normal;
-  font-style: normal;
+h1 {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  text-align: center;
+  margin: 1.5rem 0;
+  color: $color-bg-dark;
 }
