--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,6 +1,20 @@
 {% include "./src/templates/partials/_head.html" %}
 
-<h1>Yay.</h1>
+<nav>
+  <div class="star">★ 5</div>
+  <div class="meta">
+    <div class="meta-item meta__true">
+      <span>0</span>
+    </div>
+    <div class="meta-item meta__sometimes">
+      <span>2</span>
+    </div>
+    <div class="meta-item meta__false">
+      <span>1</span>
+    </div>
+  </div>
+</nav>
+
 {% include "./src/templates/puzzles/puzzles.html" %}
 
 {% include "./src/templates/partials/_footer.html" %}
