--- a/src/templates/puzzles/puzzles.html
+++ b/src/templates/puzzles/puzzles.html
@@ -1,5 +1,12 @@
-{% for puzzle in puzzles %}
-
-{{ puzzle.type }}
-
-{% endfor %}
+<div class="puzzle" style="width: {{ puzzles.length }}00vw;">
+  {% for puzzle in puzzles %}
+  <div class="puzzle-panel" style="width: 100vw;">
+    <h1>#{{ puzzle.level + 1 }}</h1>
+    <a href="#" class="btn btn-big btn__t">&times;</a>
+    <a href="#" class="btn btn-big btn__s">&times;</a>
+    <a href="#" class="btn btn-big btn__f"><span class="arrow up">▴</span></a>
+  </div>
+  {% endfor %}
+  <a href="#" class="btn btn-nav btn__half btn__bottom btn__prev"><span class="arrow left">▴</span></a>
+  <a href="#" class="btn btn-nav btn__half btn__bottom btn__next"><span class="arrow right">▴</span></a>
+</div>
