--- a/src/scss/modules/_ui.scss
+++ b/src/scss/modules/_ui.scss
@@ -49,25 +49,35 @@
     padding: 1rem;
     font-size: 4rem;
     position: relative;
-    box-shadow:
-      inset 0 -8px 0 rgba(0,0,0, $button-shadow),
-      0 12px 0 2px rgba(0,0,0, $button-shadow);
+    box-shadow: inset 0 -8px 0 rgba(0,0,0, $button-shadow);
 
-    &:hover {
+    &:after {
+      content: '';
+      position: absolute;
+      border-radius: 0.5rem;
+      z-index: -1;
+      width: 101%;
+      height: 101%;
+      background: rgba(0,0,0,$button-shadow);
+      top: 10px;
+      left: -0.5%;
+      filter: blur(2px);
+    }
 
+    &.btn__yes {
+      font-size: 3em;
+      padding: 1.72rem 1rem;
     }
 
     &:active {
-      transform: scale(0.9);
-      box-shadow:
-        inset 0 -8px 0 rgba(0,0,0, $button-shadow),
-        0 4px 0 1px rgba(0,0,0, $button-shadow);
-    }
+      top: 10px;
 
-    &.active {
-      box-shadow:
-        inset 0 -8px 0 rgba(0,0,0, $button-shadow),
-        0 4px 0 1px rgba(0,0,0, $button-shadow);
+      &:after {
+        width: 100%;
+        left: 0;
+        top: 3px;
+        filter: blur(0);
+      }
     }
   }
 
