Get game roughly working

--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -86,3 +86,9 @@ body {
     background: $color-false;
   }
 }
+
+.final-text {
+  text-align: center;
+  font-size: 5rem;
+  margin-top: $lead-single * 5;
+}
