--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,7 @@
 @import 'modules/_misc.scss';
 
 @import 'modules/_ui.scss';
+@import 'modules/_modals.scss';
 @import 'modules/_main.scss';
 
 @import 'modules/_breakpoints.scss';
