--- a/src/scss/modules/_vars.scss
+++ b/src/scss/modules/_vars.scss
@@ -33,8 +33,8 @@ $color-bg:             lighten(#5B99B5, 35%);
 $color-bg-dark:        lighten(#5B99B5, 5%);
 
 $color-true:           #6AE1E6;
-$color-false:          #FFA74A;
-$color-mystery:        #ccc;
+$color-false:          #ff936a;
+$color-mystery:        #aab0b5;
 $color-sometimes:      repeating-linear-gradient(
                          315deg,
                          $color-true,
