--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -2,7 +2,7 @@
 
 <nav>
   <div class="star">★ <span class="num">X</span></div>
-  <!-- <div class="meta">
+  <div class="meta">
     <div class="meta-item meta__true">
       <span>0</span>
     </div>
@@ -12,7 +12,7 @@
     <div class="meta-item meta__false">
       <span>1</span>
     </div>
-  </div> -->
+  </div>
 </nav>
 
 {% include "./src/templates/puzzles/puzzles.html" %}
