--- a/src/templates/partials/modal.html
+++ b/src/templates/partials/modal.html
@@ -1,7 +1,7 @@
-<div class="modal--wrap" id="results">
+<div class="modal__wrap" id="results">
   <div class="modal">
-    <div class="modal--spinner"></div>
-    <div class="modal--message modal__win">WINNER.</div>
-    <div class="modal--message modal__lose">LOSER. NO STAR FOR YOU.</div>
+    <div class="modal__spinner"></div>
+    <div class="modal__message modal--win">YEP!</div>
+    <div class="modal__message modal--lose">NOPE!</div>
   </div>
 </div>
