--- a/src/scss/modules/_modals.scss
+++ b/src/scss/modules/_modals.scss
@@ -18,7 +18,7 @@
   &__spinner {
     width: $lead-double;
     height: $lead-double;
-    background: $color-sometimes-small;
+    background: $color-both;
     animation: spin 2s ease-in-out infinite;
     margin: 0 auto;
   }
