--- a/src/templates/puzzles/puzzles.html
+++ b/src/templates/puzzles/puzzles.html
@@ -25,7 +25,7 @@
     {% endfor %}
   </div>
 </div>
-<div class="puzzle-nav">
+<div class="puzzle-nav dev">
   <a href="#" class="nav-left">dev: prev</a>
   <a href="#" class="nav-right">dev: next</a>
 </div>
