--- a/src/scss/modules/_vars.scss
+++ b/src/scss/modules/_vars.scss
@@ -1,15 +1,19 @@
-$base : #F7F6F0;
-$darken : darken(#F7F6F0 , 30%);
-$back: darken(#F7F6F0, 40%);
+$base :         #F7F6F0;
+$darken :       darken(#F7F6F0 , 30%);
+$back:          darken(#F7F6F0, 40%);
 
-$scale:       1.5;
-$base-font:   16px;
-$base-lh:     $base-font * $scale;
+$scale:         1.5;
+$base-font:     18px;
+$base-lh:       $base-font * $scale;
 
-$lead-half: $base-lh / 2;
-$lead-single: $base-lh;
-$lead-double: $base-lh * 2;
-$lead-triple: $base-lh * 3;
+$lead-half:     $base-lh / 2;
+.lead-half    { margin-bottom: $lead-half; }
+$lead-single:   $base-lh;
+.lead-single  { margin-bottom: $lead-single; }
+$lead-double:   $base-lh * 2;
+.lead-double  { margin-bottom: $lead-double; }
+$lead-triple:   $base-lh * 3;
+.lead-triple  { margin-bottom: $lead-triple; }
 
 $heading-font-family: jubilat, garamond, serif;
 $body-font-family:    brandon-grotesque, Helvetica, sans-serif;
@@ -29,40 +33,11 @@ $color-secondary:      #59f0e8;
 $color-secondary-dark: darken($color-secondary, 10%);
 $color-secondary-text: #074059;
 
-$color-bg:             lighten(#5B99B5, 35%);
+$color-bg:             #fff;
 $color-bg-dark:        lighten(#5B99B5, 5%);
 
-$color-true:           #6AE1E6;
-$color-false:          #ff936a;
-$color-mystery:        #aab0b5;
-$color-sometimes:      repeating-linear-gradient(
-                         315deg,
-                         $color-true,
-                         $color-true 70px,
-                         $color-false 70px,
-                         $color-false 140px
-                       );
-$color-sometimes-hover: repeating-linear-gradient(
-                          315deg,
-                          darken($color-true, 8%),
-                          darken($color-true, 8%) 70px,
-                          darken($color-false, 8%) 70px,
-                          darken($color-false, 8%) 140px
-                      );
-$color-sometimes-small:  repeating-linear-gradient(
-                           315deg,
-                           $color-true,
-                           $color-true 34px,
-                           $color-false 34px,
-                           $color-false 68px
-                       );
-
-$color-sea: #46afdb;
-
-$color-coral: #FC2AA1; //HOT PINK!!!!
-
-$color-gray:      #5B99B5;
-$color-gray-dark: #074059;
-
-$color-submerged-light: #D0AEE4;
-$color-submerged-dark: #007A9B;
+$color-true:           #bbef4b;
+$color-false:          #ff6e26;
+$color-noinfo:         #7dc3c7;
+$color-both:           #ab6ef0;
+$color-border:         #7a4567;
